--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <script type="module" src="./js/gallery.js"></script>
+    <script type="module" src="js/gallery.js"></script>
     <ul class="gallery js-gallery"></ul>
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
   </body>
